Fix img width on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -193,6 +193,10 @@ div.article-page div.tags {
   margin-bottom: 1rem;
 }
 
+div.article-page img {
+  max-width: 100%;
+}
+
 div.tags span.tag {
   margin-right: .5rem;
   padding: .25rem .5rem;
